--- a/app/src/main/res/layout-land/activity_show_profile.xml
+++ b/app/src/main/res/layout-land/activity_show_profile.xml
@@ -20,11 +20,10 @@
         android:orientation="horizontal">
 
         <android.support.v7.widget.AppCompatImageButton
-            android:id="@+id/sp_profile_photo"
+            android:id="@+id/sp_profile_picture"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:scaleType="centerCrop"
             android:src="@drawable/header" />
 
         <ScrollView
@@ -58,7 +57,7 @@
                         android:paddingTop="10dp">
 
                         <android.support.v7.widget.AppCompatTextView
-                            android:id="@+id/sp_profile_name"
+                            android:id="@+id/sp_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="NoFandroid"
@@ -68,7 +67,7 @@
                             android:textStyle="bold" />
 
                         <android.support.v7.widget.AppCompatTextView
-                            android:id="@+id/sp_profile_city"
+                            android:id="@+id/sp_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
@@ -102,6 +101,23 @@
                             android:tint="@color/colorAccentDark" />
                     </LinearLayout>
                 </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.3dp"
+                    android:background="@color/colorAccent" />
+
+                <RatingBar
+                    android:id="@+id/sp_rating_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:paddingTop="5dp"
+                    android:numStars="5"
+                    android:scaleX=".75"
+                    android:scaleY=".75"
+                    android:stepSize="0.5"
+                    android:isIndicator="true" />
 
                 <View
                     android:layout_width="match_parent"
