--- a/app/src/main/res/layout-land/activity_show_profile.xml
+++ b/app/src/main/res/layout-land/activity_show_profile.xml
@@ -229,6 +229,7 @@
                     android:background="@color/colorAccent" />
 
                 <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/sp_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
