--- a/app/src/main/res/layout/activity_show_profile.xml
+++ b/app/src/main/res/layout/activity_show_profile.xml
@@ -18,7 +18,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
-        <android.support.v7.widget.AppCompatImageButton
+        <ImageView
             android:id="@+id/sp_profile_picture"
             android:layout_width="match_parent"
             android:layout_height="200dp"
@@ -48,7 +48,7 @@
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp">
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
                     android:id="@+id/sp_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
                     android:id="@+id/sp_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
                 android:layout_marginRight="16dp"
                 android:orientation="vertical">
 
-                <android.support.v7.widget.AppCompatImageButton
+                <ImageButton
                     android:id="@+id/sp_mail_icon"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
@@ -85,7 +85,7 @@
                     android:src="@drawable/ic_email_black_32dp"
                     android:tint="@color/colorAccentDark" />
 
-                <android.support.v7.widget.AppCompatImageButton
+                <ImageButton
                     android:id="@+id/sp_locate_icon"
                     android:layout_width="28dp"
                     android:layout_height="28dp"
@@ -130,7 +130,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
                     android:id="@+id/sp_lent_books_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -140,7 +140,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
                     android:id="@+id/sp_lent_books_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -162,7 +162,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
                     android:id="@+id/sp_borrowed_books_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -172,7 +172,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
                     android:id="@+id/sp_borrowed_books_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -194,7 +194,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
                     android:id="@+id/sp_to_be_returned_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -204,7 +204,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <android.support.v7.widget.AppCompatTextView
+                <TextView
                     android:id="@+id/sp_to_be_returned_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -220,7 +220,7 @@
             android:layout_height="0.3dp"
             android:background="@color/colorAccent" />
 
-        <android.support.v7.widget.AppCompatTextView
+        <TextView
             android:id="@+id/sp_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
