--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <files-path
-        name="shared"
-        path="/"/>
+    <external-path
+        name="my_images"
+        path="Android/data/it.polito.mad.lab01/files/Pictures" />
 </paths>
