--- a/app/src/main/res/layout-land/activity_show_profile.xml
+++ b/app/src/main/res/layout-land/activity_show_profile.xml
@@ -16,7 +16,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <ImageView
@@ -24,7 +24,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:src="@drawable/header" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_header"
+            android:contentDescription="@string/profile_picture" />
 
         <ScrollView
             android:layout_width="0dp"
@@ -47,9 +49,18 @@
                     android:paddingBottom="10dp"
                     android:paddingTop="5dp">
 
+                    <View
+                        android:layout_width="28dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"/>
+
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginEnd="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_weight="1"
                         android:orientation="vertical"
@@ -60,7 +71,7 @@
                             android:id="@+id/sp_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="NoFandroid"
+                            android:text="@string/default_username"
                             android:textAlignment="center"
                             android:textColor="@color/colorAccent"
                             android:textSize="24sp"
@@ -71,7 +82,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
-                            android:text="Turin"
+                            android:text="@string/default_city"
                             android:textAlignment="center"
                             android:textColor="@color/colorAccent"
                             android:textSize="16sp" />
@@ -91,14 +102,16 @@
                             android:layout_height="28dp"
                             android:layout_marginBottom="12dp"
                             android:src="@drawable/ic_email_black_32dp"
-                            android:tint="@color/colorAccentDark" />
+                            android:tint="@color/colorAccentDark"
+                            android:contentDescription="@string/send_email" />
 
                         <ImageButton
                             android:id="@+id/sp_locate_icon"
                             android:layout_width="28dp"
                             android:layout_height="28dp"
                             android:src="@drawable/ic_location_on_black_32dp"
-                            android:tint="@color/colorAccentDark" />
+                            android:tint="@color/colorAccentDark"
+                            android:contentDescription="@string/show_location" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -142,7 +155,7 @@
                             android:id="@+id/sp_lent_books_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="45"
+                            android:text="@string/number_zero"
                             android:textAlignment="center"
                             android:textColor="@color/colorAccent"
                             android:textSize="18sp"
@@ -174,7 +187,7 @@
                             android:id="@+id/sp_borrowed_books_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="62"
+                            android:text="@string/number_zero"
                             android:textAlignment="center"
                             android:textColor="@color/colorAccent"
                             android:textSize="18sp"
@@ -206,7 +219,7 @@
                             android:id="@+id/sp_to_be_returned_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="3"
+                            android:text="@string/number_zero"
                             android:textAlignment="center"
                             android:textColor="@color/colorAccent"
                             android:textSize="18sp"
@@ -233,7 +246,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
-                    android:text="@string/lorem_ipsum_250"
+                    android:text="@string/default_biography"
                     android:textAlignment="center"
                     android:textColor="@color/colorAccentDark"
                     android:textSize="12sp" />
