--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -10,168 +10,181 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:clickable="true"
-        app:layout_anchor="@id/ep_picture_layout"
-        app:layout_anchorGravity="bottom|right|end"
-        android:src="@drawable/ic_photo_camera_white_24dp" />
+        android:focusable="true"
+        android:src="@drawable/ic_photo_camera_white_24dp"
+        app:layout_anchor="@id/ep_profile_picture"
+        app:layout_anchorGravity="bottom|right|end" />
 
-    <ScrollView android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/ep_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/ep_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"
-                android:elevation="4dp"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/ep_picture_layout"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                tools:showIn="@layout/activity_edit_profile">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/ep_profile_picture"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:src="@drawable/header" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                    android:contentDescription="@string/profile_picture"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/default_header" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="fill_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_marginTop="10dp"
+                    android:orientation="vertical"
+                    android:paddingEnd="20dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="20dp"
+                    android:paddingStart="8dp">
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingRight="12dp"
-                        android:paddingTop="26dp"
-                        android:gravity="bottom|center_horizontal"
-                        android:src="@drawable/ic_email_green_24dp"/>
-
-                    <android.support.design.widget.TextInputLayout
-                    android:id="@+id/input_layout_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/ep_input_email"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/hint_email"
-                        android:inputType="textEmailAddress"/>
-
-                    </android.support.design.widget.TextInputLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:focusedByDefault="true">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:paddingRight="12dp"
-                        android:paddingTop="24dp"
-                        android:gravity="bottom|center_horizontal"
-                        android:src="@drawable/ic_person_green_24dp"/>
+                        android:orientation="horizontal">
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/input_layout_username"
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom|center_horizontal"
+                            android:paddingLeft="12dp"
+                            android:paddingRight="12dp"
+                            android:paddingTop="26dp"
+                            android:tint="@color/colorAccent"
+                            android:src="@drawable/ic_email_black_24dp" />
+
+                        <android.support.design.widget.TextInputLayout
+                            android:id="@+id/input_layout_email"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/ep_input_email"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/hint_email"
+                                android:inputType="textEmailAddress" />
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingTop="5dp">
 
-                        <EditText
-                            android:id="@+id/ep_input_username"
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:gravity="bottom|center_horizontal"
+                            android:paddingLeft="12dp"
+                            android:paddingRight="12dp"
+                            android:paddingTop="24dp"
+                            android:tint="@color/colorAccent"
+                            android:src="@drawable/ic_person_black_24dp" />
+
+                        <android.support.design.widget.TextInputLayout
+                            android:id="@+id/input_layout_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/hint_username" />
-                    </android.support.design.widget.TextInputLayout>
-                </LinearLayout>
+                            app:counterEnabled="true"
+                            app:counterMaxLength="@integer/max_length_username">>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                            <EditText
+                                android:id="@+id/ep_input_username"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="textNoSuggestions"
+                                android:hint="@string/hint_username"
+                                android:maxLength="@integer/max_length_username" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingRight="12dp"
-                        android:paddingTop="26dp"
-                        android:gravity="bottom|center_horizontal"
-                        android:src="@drawable/ic_description_green_24dp"/>
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/input_layout_description"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingTop="5dp">
 
-                        <EditText
-                            android:id="@+id/ep_input_description"
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom|center_horizontal"
+                            android:paddingLeft="12dp"
+                            android:paddingRight="12dp"
+                            android:paddingTop="26dp"
+                            android:tint="@color/colorAccent"
+                            android:src="@drawable/ic_description_black_24dp" />
+
+                        <android.support.design.widget.TextInputLayout
+                            android:id="@+id/input_layout_description"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/hint_description" />
+                            app:counterEnabled="true"
+                            app:counterMaxLength="@integer/max_length_biography">
 
-                    </android.support.design.widget.TextInputLayout>
-                </LinearLayout>
+                            <EditText
+                                android:id="@+id/ep_input_biography"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="textLongMessage"
+                                android:maxLength="250"
+                                android:hint="@string/hint_biography" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingRight="12dp"
-                        android:paddingTop="26dp"
-                        android:gravity="bottom|center_horizontal"
-                        android:src="@drawable/ic_location_on_green_24dp"/>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/input_layout_location"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingTop="5dp">
 
-                        <EditText
-                            android:id="@+id/ep_input_location"
-                            android:layout_width="match_parent"
+                        <ImageView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:hint="@string/hint_location" />
+                            android:gravity="bottom|center_horizontal"
+                            android:paddingLeft="12dp"
+                            android:paddingRight="12dp"
+                            android:paddingTop="26dp"
+                            android:tint="@color/colorAccent"
+                            android:src="@drawable/ic_location_on_black_24dp" />
 
-                    </android.support.design.widget.TextInputLayout>
+                        <android.support.design.widget.TextInputLayout
+                            android:id="@+id/input_layout_location"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <EditText
+                                android:id="@+id/ep_input_location"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="@string/hint_location" />
+
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
+
                 </LinearLayout>
-
             </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+        </ScrollView>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
