--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
-            android:elevation="4dp"
+            android:elevation="6dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
@@ -51,10 +51,44 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical"
-                    android:paddingEnd="20dp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="20dp"
-                    android:paddingStart="8dp">
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:paddingTop="5dp">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="bottom|center_horizontal"
+                            android:paddingTop="24dp"
+                            android:tint="@color/colorPrimary"
+                            android:src="@drawable/ic_person_black_24dp"
+                            android:contentDescription="@string/hint_username"/>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:id="@+id/ep_input_layout_username"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
+                            app:counterEnabled="true"
+                            app:counterMaxLength="@integer/max_length_username">
+
+                            <EditText
+                                android:id="@+id/ep_input_username"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="textNoSuggestions"
+                                android:hint="@string/hint_username"
+                                android:maxLength="@integer/max_length_username"
+                                android:textSize="@dimen/material_text_subhead" />
+
+                        </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -65,23 +99,28 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="bottom|center_horizontal"
-                            android:paddingLeft="12dp"
-                            android:paddingRight="12dp"
                             android:paddingTop="26dp"
-                            android:tint="@color/colorAccent"
-                            android:src="@drawable/ic_email_black_24dp" />
+                            android:tint="@color/colorPrimary"
+                            android:src="@drawable/ic_email_black_24dp"
+                            android:contentDescription="@string/hint_email" />
 
                         <android.support.design.widget.TextInputLayout
-                            android:id="@+id/input_layout_email"
+                            android:id="@+id/ep_input_layout_email"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
+                            app:counterEnabled="true"
+                            app:counterMaxLength="@integer/max_length_email">
 
                             <EditText
                                 android:id="@+id/ep_input_email"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="@string/hint_email"
-                                android:inputType="textEmailAddress" />
+                                android:inputType="textEmailAddress"
+                                android:maxLength="@integer/max_length_email"
+                                android:textSize="@dimen/material_text_subhead" />
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
 
@@ -93,28 +132,29 @@
 
                         <ImageView
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:gravity="bottom|center_horizontal"
-                            android:paddingLeft="12dp"
-                            android:paddingRight="12dp"
-                            android:paddingTop="24dp"
-                            android:tint="@color/colorAccent"
-                            android:src="@drawable/ic_person_black_24dp" />
+                            android:paddingTop="26dp"
+                            android:tint="@color/colorPrimary"
+                            android:src="@drawable/ic_location_on_black_24dp"
+                            android:contentDescription="@string/hint_location" />
 
                         <android.support.design.widget.TextInputLayout
-                            android:id="@+id/input_layout_username"
+                            android:id="@+id/ep_input_layout_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
                             app:counterEnabled="true"
-                            app:counterMaxLength="@integer/max_length_username">>
+                            app:counterMaxLength="@integer/max_length_location">
 
                             <EditText
-                                android:id="@+id/ep_input_username"
+                                android:id="@+id/ep_input_location"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:inputType="textNoSuggestions"
-                                android:hint="@string/hint_username"
-                                android:maxLength="@integer/max_length_username" />
+                                android:hint="@string/hint_location"
+                                android:textSize="@dimen/material_text_subhead"
+                                android:maxLength="@integer/max_length_location"/>
 
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
@@ -129,16 +169,17 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="bottom|center_horizontal"
-                            android:paddingLeft="12dp"
-                            android:paddingRight="12dp"
                             android:paddingTop="26dp"
-                            android:tint="@color/colorAccent"
-                            android:src="@drawable/ic_description_black_24dp" />
+                            android:tint="@color/colorPrimary"
+                            android:src="@drawable/ic_description_black_24dp"
+                            android:contentDescription="@string/hint_biography" />
 
                         <android.support.design.widget.TextInputLayout
-                            android:id="@+id/input_layout_description"
+                            android:id="@+id/ep_input_layout_description"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
                             app:counterEnabled="true"
                             app:counterMaxLength="@integer/max_length_biography">
 
@@ -146,39 +187,10 @@
                                 android:id="@+id/ep_input_biography"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:inputType="textLongMessage"
+                                android:inputType="textMultiLine"
                                 android:maxLength="250"
-                                android:hint="@string/hint_biography" />
-
-                        </android.support.design.widget.TextInputLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:paddingTop="5dp">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="bottom|center_horizontal"
-                            android:paddingLeft="12dp"
-                            android:paddingRight="12dp"
-                            android:paddingTop="26dp"
-                            android:tint="@color/colorAccent"
-                            android:src="@drawable/ic_location_on_black_24dp" />
-
-                        <android.support.design.widget.TextInputLayout
-                            android:id="@+id/input_layout_location"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <EditText
-                                android:id="@+id/ep_input_location"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/hint_location" />
+                                android:hint="@string/hint_biography"
+                                android:textSize="@dimen/material_text_body1"/>
 
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
