--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,6 @@
 <resources>
     <integer name="max_length_username">25</integer>
     <integer name="max_length_biography">250</integer>
+    <integer name="max_length_email">255</integer>
+    <integer name="max_length_location">50</integer>
 </resources>
