--- a/app/src/main/res/layout-land/activity_edit_profile.xml
+++ b/app/src/main/res/layout-land/activity_edit_profile.xml
@@ -65,11 +65,11 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:contentDescription="@string/hint_username"
                             android:gravity="bottom|center_horizontal"
                             android:paddingTop="24dp"
-                            android:tint="@color/colorPrimary"
                             android:src="@drawable/ic_person_black_24dp"
-                            android:contentDescription="@string/hint_username"/>
+                            android:tint="@color/colorPrimary" />
 
                         <android.support.design.widget.TextInputLayout
                             android:id="@+id/ep_input_layout_username"
@@ -84,8 +84,8 @@
                                 android:id="@+id/ep_input_username"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:inputType="textNoSuggestions"
                                 android:hint="@string/hint_username"
+                                android:inputType="textNoSuggestions"
                                 android:maxLength="@integer/max_length_username"
                                 android:textSize="@dimen/material_text_subhead" />
 
@@ -100,11 +100,11 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:contentDescription="@string/hint_email"
                             android:gravity="bottom|center_horizontal"
                             android:paddingTop="26dp"
-                            android:tint="@color/colorPrimary"
                             android:src="@drawable/ic_email_black_24dp"
-                            android:contentDescription="@string/hint_email" />
+                            android:tint="@color/colorPrimary" />
 
                         <android.support.design.widget.TextInputLayout
                             android:id="@+id/ep_input_layout_email"
@@ -135,11 +135,11 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:contentDescription="@string/hint_location"
                             android:gravity="bottom|center_horizontal"
                             android:paddingTop="26dp"
-                            android:tint="@color/colorPrimary"
                             android:src="@drawable/ic_location_on_black_24dp"
-                            android:contentDescription="@string/hint_location" />
+                            android:tint="@color/colorPrimary" />
 
                         <android.support.design.widget.TextInputLayout
                             android:id="@+id/ep_input_layout_location"
@@ -154,9 +154,10 @@
                                 android:id="@+id/ep_input_location"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:digits="@string/alpha_space_characters"
                                 android:hint="@string/hint_location"
-                                android:textSize="@dimen/material_text_subhead"
-                                android:maxLength="@integer/max_length_location"/>
+                                android:maxLength="@integer/max_length_location"
+                                android:textSize="@dimen/material_text_subhead" />
 
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
@@ -170,11 +171,11 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:contentDescription="@string/hint_biography"
                             android:gravity="bottom|center_horizontal"
                             android:paddingTop="26dp"
-                            android:tint="@color/colorPrimary"
                             android:src="@drawable/ic_description_black_24dp"
-                            android:contentDescription="@string/hint_biography" />
+                            android:tint="@color/colorPrimary" />
 
                         <android.support.design.widget.TextInputLayout
                             android:id="@+id/ep_input_layout_description"
@@ -189,10 +190,10 @@
                                 android:id="@+id/ep_input_biography"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:hint="@string/hint_biography"
                                 android:inputType="textMultiLine"
                                 android:maxLength="250"
-                                android:hint="@string/hint_biography"
-                                android:textSize="@dimen/material_text_body1"/>
+                                android:textSize="@dimen/material_text_body1" />
 
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
