--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -12,6 +12,7 @@
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_photo_camera_white_24dp"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_anchor="@id/ep_profile_picture"
         app:layout_anchorGravity="bottom|right|end" />
 
@@ -25,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
-            android:elevation="6dp"
+            android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
 
@@ -43,7 +44,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical"
                 android:paddingLeft="16dp"
@@ -64,6 +65,15 @@
                         android:src="@drawable/ic_person_black_24dp"
                         android:tint="@color/colorPrimary" />
 
+                    <!-- Dummy item to prevent EditText from receiving focus at startup -->
+                    <LinearLayout
+                        android:id="@+id/ep_dummy_prevent_focus"
+                        android:layout_width="0px"
+                        android:layout_height="0px"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:orientation="horizontal" />
+
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/ep_input_layout_username"
                         android:layout_width="match_parent"
@@ -80,6 +90,8 @@
                             android:hint="@string/hint_username"
                             android:inputType="textNoSuggestions"
                             android:maxLength="@integer/max_length_username"
+                            android:nextFocusLeft="@id/ep_input_username"
+                            android:nextFocusUp="@id/ep_input_username"
                             android:textSize="@dimen/material_text_subhead" />
 
                     </android.support.design.widget.TextInputLayout>
@@ -147,8 +159,8 @@
                             android:id="@+id/ep_input_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:digits="@string/alpha_space_characters"
                             android:hint="@string/hint_location"
+                            android:inputType="textAutoComplete"
                             android:maxLength="@integer/max_length_location"
                             android:textSize="@dimen/material_text_subhead" />
 
